--- a/frontend/src/app/features/auth/pages/register-page/register-page.component.html
+++ b/frontend/src/app/features/auth/pages/register-page/register-page.component.html
@@ -1,7 +1,7 @@
-    <h1 class="text-2xl font-semibold mb-3">Crea tu cuenta gratis</h1>
+<h1 class="text-2xl font-semibold mb-3">Crea tu cuenta gratis</h1>
 
-    <!-- OPCIONAL: Añadir avatar -->
-    <!-- <div class="profile-picture-section">
+<!-- OPCIONAL: Añadir avatar -->
+<!-- <div class="profile-picture-section">
       <input
         type="file"
         #fileInput
@@ -25,120 +25,125 @@
       </div>
     </div> -->
 
-    <form
-      [formGroup]="registerForm"
-      (ngSubmit)="onSubmit()"
-      class="flex flex-col gap-3"
+<form
+  [formGroup]="registerForm"
+  (ngSubmit)="onSubmit()"
+  class="flex flex-col gap-3"
+>
+  <div class="flex flex-col gap-2">
+    <label for="username">Username</label>
+    <input
+      type="text"
+      id="username"
+      pInputText
+      [pAutoFocus]="true"
+      formControlName="username"
+      placeholder="nombredeusuario"
+      [ngClass]="{
+        'ng-invalid ng-dirty': f['username'].invalid && f['username'].touched
+      }"
+    />
+    @if (registerForm.get('username'); as usernameControl) { @if
+    (usernameControl.invalid && usernameControl.dirty) {
+    <p-message severity="error">
+      @if (usernameControl.errors?.['required']) { El username es obligatorio. }
+      @if (usernameControl.errors?.['minlength']) { El username debe tener al
+      menos
+      {{ usernameControl.errors?.['minlength'].requiredLength }} caracteres. }
+    </p-message>
+    } }
+  </div>
+
+  <div class="flex flex-col gap-2">
+    <label for="email">Email</label>
+    <input
+      type="email"
+      id="email"
+      pInputText
+      formControlName="email"
+      placeholder="tu.email@ejemplo.com"
+      [ngClass]="{
+        'ng-invalid ng-dirty': f['email'].invalid && f['email'].touched
+      }"
+    />
+    @if (registerForm.get('email'); as emailControl) { @if (emailControl.invalid
+    && emailControl.dirty) {
+    <p-message severity="error">
+      @if (emailControl.errors?.['required']) { El email es obligatorio. } @if
+      (emailControl.errors?.['email']) { Introduce un email válido. }
+    </p-message>
+    } }
+  </div>
+
+  <div class="flex flex-col gap-2">
+    <label for="password">Contraseña</label>
+    <p-password
+      id="password"
+      formControlName="password"
+      placeholder="********"
+      [toggleMask]="true"
+      [feedback]="false"
+      fluid
+      [ngClass]="{
+        'ng-invalid ng-dirty': f['password'].invalid && f['password'].touched
+      }"
+    ></p-password>
+    @if (registerForm.get('password'); as passwordControl) { @if
+    (passwordControl.invalid && passwordControl.dirty) {
+    <p-message severity="error">
+      @if (passwordControl.errors?.['required']) { La contraseña es obligatoria.
+      } @if (passwordControl.errors?.['minlength']) { La contraseña debe tener
+      al menos
+      {{ passwordControl.errors?.['minlength'].requiredLength }} caracteres. }
+    </p-message>
+    } }
+  </div>
+
+  <div class="flex flex-col gap-2">
+    <label for="confirmPassword">Confirmar Contraseña</label>
+    <p-password
+      id="confirmPassword"
+      formControlName="confirmPassword"
+      placeholder="********"
+      [toggleMask]="true"
+      [feedback]="false"
+      fluid
+      [ngClass]="{
+        'ng-invalid ng-dirty':
+          f['confirmPassword'].invalid && f['confirmPassword'].touched
+      }"
+    ></p-password>
+    @if (registerForm.get('confirmPassword'); as confirmPasswordControl) { @if
+    (confirmPasswordControl.invalid && confirmPasswordControl.dirty) {
+    <p-message severity="error">
+      @if (confirmPasswordControl.errors?.['required']) { Confirma la
+      contraseña. }
+    </p-message>
+    } }
+  </div>
+
+  @if (registerForm.errors?.['mismatch'] && registerForm.dirty) {
+  <p-message severity="error">Las contraseñas no coinciden.</p-message>
+  } @if (errorMessage) {
+  <p-message severity="error">{{ errorMessage }}</p-message>
+  }
+
+  <p-button
+    type="submit"
+    [loading]="isLoading"
+    label="Crear cuenta"
+    styleClass="mt-5 w-full"
+    [disabled]="registerForm.invalid"
+    (click)="onSubmit()"
+  />
+</form>
+
+<div class="mt-5">
+  <div class="flex gap-1 justify-center">
+    <p>¿Ya tienes cuenta?</p>
+    <a [routerLink]="['/auth/login']" class="underline cursor-pointer"
+      >¡Inicia sesión!</a
     >
-      <div class="flex flex-col gap-2">
-        <label for="username">Username</label>
-        <input
-          type="text"
-          id="username"
-          pInputText
-          [pAutoFocus]="true"
-          formControlName="username"
-          placeholder="nombredeusuario"
-          [ngClass]="{
-            'ng-invalid ng-dirty':
-              f['username'].invalid && f['username'].touched
-          }"
-        />
-        @if (registerForm.get('username'); as usernameControl) { @if
-        (usernameControl.invalid && usernameControl.dirty) {
-          <p-message severity="error">
-            @if (usernameControl.errors?.['required']) { El username es
-              obligatorio. } @if (usernameControl.errors?.['minlength']) { El
-              username debe tener al menos
-              {{ usernameControl.errors?.['minlength'].requiredLength }} caracteres.
-              }
-          </p-message>
-        } }
-      </div>
-
-      <div class="flex flex-col gap-2">
-        <label for="email">Email</label>
-        <input
-          type="email"
-          id="email"
-          pInputText
-          formControlName="email"
-          placeholder="tu.email@ejemplo.com"
-          [ngClass]="{
-            'ng-invalid ng-dirty': f['email'].invalid && f['email'].touched
-          }"
-        />
-        @if (registerForm.get('email'); as emailControl) { @if
-        (emailControl.invalid && emailControl.dirty) {
-        <p-message severity="error">
-          @if (emailControl.errors?.['required']) { El email es obligatorio. }
-          @if (emailControl.errors?.['email']) { Introduce un email válido. }
-        </p-message>
-        } }
-      </div>
-
-      <div class="flex flex-col gap-2">
-        <label for="password">Contraseña</label>
-        <p-password
-          id="password"
-          formControlName="password"
-          placeholder="********"
-          [toggleMask]="true"
-          [feedback]="false"
-          fluid
-          [ngClass]="{
-            'ng-invalid ng-dirty':
-              f['password'].invalid && f['password'].touched
-          }"
-        ></p-password>
-        @if (registerForm.get('password'); as passwordControl) { @if
-        (passwordControl.invalid && passwordControl.dirty) {
-        <p-message severity="error">
-          @if (passwordControl.errors?.['required']) { La contraseña es
-          obligatoria. } @if (passwordControl.errors?.['minlength']) { La
-          contraseña debe tener al menos
-          {{ passwordControl.errors?.['minlength'].requiredLength }} caracteres.
-          }
-        </p-message>
-        } }
-      </div>
-
-      <div class="flex flex-col gap-2">
-        <label for="confirmPassword">Confirmar Contraseña</label>
-        <p-password
-          id="confirmPassword"
-          formControlName="confirmPassword"
-          placeholder="********"
-          [toggleMask]="true"
-          [feedback]="false"
-          fluid
-          [ngClass]="{
-            'ng-invalid ng-dirty':
-              f['confirmPassword'].invalid && f['confirmPassword'].touched
-          }"
-        ></p-password>
-        @if (registerForm.get('confirmPassword'); as confirmPasswordControl) {
-        @if (confirmPasswordControl.invalid && confirmPasswordControl.dirty) {
-        <p-message severity="error">
-          @if (confirmPasswordControl.errors?.['required']) { Confirma la
-          contraseña. }
-        </p-message>
-        } }
-      </div>
-
-      @if (registerForm.errors?.['mismatch'] && registerForm.dirty) {
-      <p-message severity="error">Las contraseñas no coinciden.</p-message>
-      } @if (errorMessage) {
-      <p-message severity="error">{{ errorMessage }}</p-message>
-      }
-
-      <p-button type="submit" [loading]="isLoading" label="Crear cuenta" styleClass="mt-5 w-full" [disabled]="registerForm.invalid" />
-    </form>
-
-    <div class="mt-5">
-      <div class="flex gap-1 justify-center">
-        <p>¿Ya tienes cuenta?</p>
-        <a [routerLink]="['/auth/login']" class="underline cursor-pointer">¡Inicia sesión!</a>
-      </div>
-    </div>
+  </div>
+</div>
 <p-toast />
