--- a/frontend/src/app/features/onboarding/pages/create-family/create-family.component.css
+++ b/frontend/src/app/features/onboarding/pages/create-family/create-family.component.css
@@ -1,4 +1,4 @@
-@keyframes slideInFadeIn {
+/* @keyframes slideInFadeIn {
   from {
     opacity: 0;
     transform: translateY(20px);
@@ -133,7 +133,7 @@
   box-sizing: border-box;
 } */
 
-.p-inputtext::placeholder {
+/* .p-inputtext::placeholder {
   color: #9b9b9b;
 }
 
@@ -203,4 +203,4 @@
 .p-button:active {
   transform: translateY(0);
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-}
+} */
