Creacion de estilos

--- a/frontend/src/app/features/auth/pages/login-page/login-page.component.html
+++ b/frontend/src/app/features/auth/pages/login-page/login-page.component.html
@@ -59,7 +59,7 @@
   <p-button
     label="Iniciar Sesión"
     type="submit"
-    styleClass="w-full mt-5"
+    styleClass="w-full mt-5 light-50"
     [disabled]="loginForm.invalid"
   ></p-button>
 </form>
