--- a/frontend/src/app/components/child/child-form/child-form.component.html
+++ b/frontend/src/app/components/child/child-form/child-form.component.html
@@ -4,7 +4,9 @@
   <div
     class="bg-white dark:bg-gray-700 rounded-2xl shadow-lg w-[90%] max-w-md max-h-[90vh] flex flex-col p-6 overflow-hidden"
   >
-    <h2 class="text-xl font-semibold text-gray-800 dark:text-white mb-4 shrink-0">
+    <h2
+      class="text-xl font-semibold text-gray-800 dark:text-white mb-4 shrink-0"
+    >
       @if (editMode) { Editar Niño } @else { Crear Niño }
     </h2>
 
