--- a/frontend/src/app/features/auth/layouts/auth-layout/auth-layout.component.html
+++ b/frontend/src/app/features/auth/layouts/auth-layout/auth-layout.component.html
@@ -1,6 +1,6 @@
 <div class="h-screen max-w-screen flex items-center justify-center">
   <div class="container mx-auto my-auto md:max-w-md">
-    <div class="card mx-5 space-y-5" [style]="{ background: '#5fc4b3' }">
+    <div class="card mx-5 space-y-5">
       <app-card-header [showDismissable]="showDismissable" />
       <router-outlet />
     </div>
