--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -2,7 +2,6 @@
 @import "primeicons/primeicons.css";
 @plugin "tailwindcss-primeui";
 
-
 @custom-variant dark (&:where(.dark, .dark *));
 
 @layer base {
@@ -30,7 +29,11 @@ body {
 }
 
 .card {
-  @apply dark:bg-[#9ed2c5] shadow-md bg-[#4e8778] p-6 rounded-lg text-white dark:text-gray-700; 
+  @apply dark:bg-[#9ed2c5] shadow-md bg-[#9ed2c5] p-6 rounded-lg text-white dark:text-gray-700;
+}
+
+.card-secondary {
+  @apply shadow-md bg-[#ffffff] p-6 rounded-lg text-gray-700 dark:text-white;
 }
 
 label {
