arreglo calendario + mas casos de eventos para la BD

--- a/frontend/src/app/features/dashboard/pages/routines/calendar-page/calendar-page.component.html
+++ b/frontend/src/app/features/dashboard/pages/routines/calendar-page/calendar-page.component.html
@@ -5,6 +5,7 @@
       [options]="filtroOpciones"
       [(ngModel)]="filtroSeleccionado"
       optionLabel="label"
+      optionValue="value"
       placeholder="Filtrar por niño"
       class="w-full"
       (onChange)="filtrarEventos()"
