implementacion con el backend de activity form mas fix de filtro calendario

--- a/frontend/src/app/components/activity/activity-form.component.html
+++ b/frontend/src/app/components/activity/activity-form.component.html
@@ -39,7 +39,7 @@
       </div>
       <p-select
         [options]="filtroOpciones"
-        formControlName="nino_id"
+        formControlName="ninos_id"
         [optionValue]="'value'"
         optionLabel="label"
         placeholder="Selecciona Niño"
