--- a/frontend/src/app/features/dashboard/pages/profiles/user-profile/user-profile.component.html
+++ b/frontend/src/app/features/dashboard/pages/profiles/user-profile/user-profile.component.html
@@ -10,7 +10,9 @@
         <!-- Avatar -->
         <div class="w-32 h-32 rounded-full overflow-hidden">
           <img
-            [src]="user.avatar"
+            src="{{
+              user?.img_perfil == null ? 'usuario-perfil.png' : user?.img_perfil
+            }}"
             alt="User Avatar"
             class="w-full h-full object-cover"
           />
@@ -19,36 +21,34 @@
         <!-- User info -->
         <div class="leading-tight text-left">
           <p class="text-base font-semibold text-gray-900 dark:text-white">
-            {{ user.nick }}
+            {{ user?.nick }}
           </p>
-          @if (user.name && user.surname) {
+          @if (true) {
           <p class="text-sm text-gray-500 dark:text-gray-400">
-            {{ user.name }} {{ user.surname }}
+            {{ user?.nombre }} {{ user?.apellido }}
           </p>
           }
           <p class="text-sm text-gray-500 dark:text-gray-400">
-            {{ user.rol }}
+            {{ this.rolFamilia }}
           </p>
         </div>
       </div>
 
       <!-- Childrens -->
-      <div class="flex items-center justify-center space-x-4">
+      <div class="grid grid-cols-3 gap-2 mt-4 place-items-center">
         @for (child of children; track child) {
         <button
           (click)="selectChild(child)"
           [class.bg-orange-100]="child === selectedChild"
           [class.text-orange-700]="child === selectedChild"
           [class.bg-gray-200]="child !== selectedChild"
-          class="rounded-full w-16 h-16 flex items-center justify-center hover:cursor-pointer transition-colors duration-200"
+          class="rounded-full w-19 h-19 flex items-center justify-center hover:cursor-pointer transition-colors duration-200"
         >
-          <span class="text-xs font-medium">
-            {{ child.name }}
-          </span>
+           <span class="text-xs font-medium truncate text-center max-w-[954]">{{ child.nombre }}</span>
         </button>
         }
         <button
-          class="bg-gray-200 hover:bg-gray-300 rounded-full w-14 h-14 flex items-center justify-center hover:cursor-pointer"
+          class="bg-gray-200 hover:bg-gray-300 rounded-full w-19 h-19 flex items-center justify-center hover:cursor-pointer"
           (click)="showChildModal()"
         >
           <i class="pi pi-plus text-gray-700 text-lg"></i>
@@ -63,23 +63,21 @@
         <h2
           class="text-lg font-semibold text-gray-900 dark:text-white mb-4 ml-2"
         >
-          {{ selectedChild.name }}
+          {{ selectedChild.nombre }} {{ selectedChild.apellido }}
         </h2>
         <div class="mt-3 flex items-center justify-between ml-2 mr-2">
           <p class="text-sm font-medium text-gray-900 dark:text-white">
-            {{ selectedChild.age }}
+            {{ getEdad(selectedChild.fecha_nacimiento) }}
           </p>
-          <button
-            (click)="router.navigate(['/child-profile/{{selectedChild.id}}'])"
-            class="hover:cursor-pointer"
-          >
+          <button class="hover:cursor-pointer"
+            (click)="goToNino(selectedChild.id)">
             <i class="pi pi-search text-gray-600 dark:text-white text-sm"></i>
           </button>
         </div>
 
         <div class="relative mt-4">
           <img
-            [src]="selectedChild.image"
+            [src]="selectedChild.img_perfil ? selectedChild.img_perfil : selectedChild.genero == 'masculino' ? 'nino.png' : 'nina.png'"
             alt="Foto del niño"
             class="w-full rounded-xl object-cover"
           />
@@ -96,35 +94,45 @@
     <div
       class="bg-[#9ed2c5] dark:bg-gray-700 rounded-2xl shadow p-6 space-y-6 text-center"
     >
-
-    <div class="flex items-center justify-between mb-4">
-       <h2
-        class="text-lg font-semibold text-center text-gray-900 dark:text-white mb-2"
-      >
-        INTEGRANTES DE LA FAMILIA
-      </h2>
-
-      <!-- Botón añadir familiar -->
-      <div class="flex justify-center mb-4">
-        <button
-          (click)="showFamilyModal()"
-          class="flex items-center gap-2 bg-purple-100 text-purple-800 hover:bg-purple-200 px-4 py-2 rounded-xl text-sm font-medium transition-colors"
+      <div class="flex items-center justify-between mb-4">
+        <h2
+          class="text-lg font-semibold text-center text-gray-900 dark:text-white mb-2"
         >
-          <i class="pi pi-user-plus text-sm"></i>
-          +
-        </button>
-    </div>
-     
+          INTEGRANTES DE LA FAMILIA
+        </h2>
+
+        <!-- Botón añadir familiar -->
+        <div class="flex justify-center mb-4">
+          <button
+            (click)="showFamilyModal()"
+            class="flex items-center gap-2 bg-purple-100 text-purple-800 hover:bg-purple-200 px-4 py-2 rounded-xl text-sm font-medium transition-colors"
+          >
+            <i class="pi pi-user-plus text-sm"></i>
+            +
+          </button>
+        </div>
       </div>
-      @for (member of familyMembers; track member) {
+      @for (member of usersFamily; track member) {
       <div
         class="flex justify-between items-center px-4 py-3 rounded-xl"
         [ngClass]="getBgColor(member)"
       >
         <span class="text-sm font-medium text-gray-800">
-          {{ member.name }} – {{ member.role }}
+          {{ member.usuarios.nick }} – {{ member.rol == 'admin' ? 'Administrador' : 'Cuidador' }}
         </span>
-        <div class="w-8 h-8 rounded-full bg-gray-700"></div>
+        <div>
+            <button
+              class="text-blue-500 hover:text-blue-700"
+            >
+              <i class="pi pi-pen-to-square"></i>
+            </button>
+            <button
+              class="text-red-500 hover:text-red-700 ml-2"
+              
+            >
+              <i class="pi pi-trash"></i>
+            </button>
+          </div>
       </div>
       }
     </div>
@@ -139,7 +147,9 @@
         class="w-32 h-32 rounded-full overflow-hidden border-4 border-white shadow-md"
       >
         <img
-          [src]="user.avatar"
+          src="{{
+            user?.img_perfil == null ? 'usuario-perfil.png' : user?.img_perfil
+          }}"
           alt="Avatar"
           class="w-full h-full object-cover"
         />
@@ -148,19 +158,22 @@
       <!-- Info -->
       <div>
         <h2 class="text-2xl font-bold text-gray-900 dark:text-white">
-          {{ user.name }} {{ user.surname }}
+          {{ user?.nombre }} {{ user?.apellido }}
         </h2>
-        <p class="text-gray-600 dark:text-gray-300">{{ user.nick }}</p>
+        <p class="text-gray-600 dark:text-gray-300">{{ user?.nick }}</p>
         <p class="text-sm text-gray-500 dark:text-gray-400">
-          {{ user.email }}
+          {{ user?.email }}
         </p>
         <p class="text-sm text-gray-500 dark:text-gray-400">
-          Miembro desde {{ user.createdAt }}
+          Rol: {{ this.rolFamilia == "admin" ? "Administrador" : "Cuidador" }}
+        </p>
+        <p class="text-sm text-gray-500 dark:text-gray-400">
+          Miembro desde {{ formatearFecha(user?.fecha_creacion || "") }}
         </p>
       </div>
       <button
+        (click)="goToEditarPerfil()"
         class="bg-purple-500 hover:bg-purple-600 dark:bg-gray-800 dark:hover:bg-gray-700 text-white px-4 py-2 rounded-md shadow"
-        (click)="router.navigate(['/settings/edit-profile'])"
       >
         Editar Perfil
       </button>
@@ -188,7 +201,13 @@
               <div class="flex items-center gap-4">
                 <div class="relative mt-4">
                   <img
-                    [src]="selectedChild.image"
+                    src="{{
+                      child.img_perfil
+                        ? child.img_perfil
+                        : child.genero == 'masculino'
+                        ? 'nino.png'
+                        : 'nina.png'
+                    }}"
                     alt="Foto del niño"
                     class="w-50 rounded-xl object-cover"
                   />
@@ -197,13 +216,13 @@
                   <h4
                     class="text-lg font-semibold text-gray-900 dark:text-white"
                   >
-                    {{ child.name }}
+                    {{ child.nombre }} {{ child.apellido }}
                   </h4>
                   <p class="text-sm text-gray-600 dark:text-gray-400">
-                    {{ child.age }} años
+                    {{ getEdad(child.fecha_nacimiento) }} años
                   </p>
                   <p class="text-sm text-gray-600 dark:text-gray-400">
-                    Nacimiento: {{ child.fecha_nacimiento }}
+                    Nacimiento: {{ formatearFecha(child.fecha_nacimiento) }}
                   </p>
                   <p class="text-sm text-gray-600 dark:text-gray-400">
                     Peso: {{ child.peso }} kg
@@ -216,12 +235,11 @@
                   </p>
                 </div>
               </div>
+              @if(child.descripcion) {
               <p class="mt-2 italic text-gray-500">“{{ child.descripcion }}”</p>
+              }
             </div>
-            <button
-              (click)="router.navigate(['/child-profile'])"
-              class="hover:cursor-pointer"
-            >
+            <button (click)="goToNino(child.id)" class="hover:cursor-pointer">
               <i
                 class="pi pi-angle-right text-xl text-gray-600 dark:text-white"
               ></i>
@@ -247,18 +265,43 @@
       </div>
 
       <div class="grid grid-cols-3 gap-4">
-        @for (member of familyMembers; track member) {
+        @for (member of usersFamily; track member) {
         <div
-          class="bg-white dark:bg-gray-800 shadow rounded-xl p-4 flex items-center gap-4"
+          class="bg-white dark:bg-gray-800 shadow rounded-xl p-4 flex items-center justify-between"
         >
-          <div class="text-2xl">🧑</div>
+          <div class="flex items-center gap-4">
+            <div>
+              <img
+                src="{{
+                  user?.img_perfil == null
+                    ? 'usuario-perfil.png'
+                    : user?.img_perfil
+                }}"
+                alt="User Avatar"
+                class="w-15 h-15 object-cover"
+              />
+            </div>
+            <div>
+              <p class="text-gray-900 dark:text-white font-medium">
+                {{ member.usuarios.nick }}
+              </p>
+              <p class="text-sm text-gray-600 dark:text-gray-400">
+                {{ member.rol }}
+              </p>
+            </div>
+          </div>
           <div>
-            <p class="text-gray-900 dark:text-white font-medium">
-              {{ member.name }}
-            </p>
-            <p class="text-sm text-gray-600 dark:text-gray-400">
-              {{ member.role }}
-            </p>
+            <button
+              class="text-blue-500 hover:text-blue-700"
+            >
+              <i class="pi pi-pen-to-square"></i>
+            </button>
+            <button
+              class="text-red-500 hover:text-red-700 ml-2"
+              
+            >
+              <i class="pi pi-trash"></i>
+            </button>
           </div>
         </div>
         }
@@ -278,7 +321,7 @@
     </div>
   </div>
   @if (childModalVisible) {
-  <app-child-form (cerrar)="hideChildModal()"> </app-child-form>
+  <app-child-form (cerrar)="hideChildModal()"  (addChild)="addChild($event)"> </app-child-form>
 
   } @if (familyModalVisible) {
   <app-family-form (cerrar)="hideFamilyModal()"> </app-family-form>
