Cambio en las rutas
Y reformulacion de mensajes en pantalla

--- a/frontend/src/app/features/auth/pages/message1/message1.component.html
+++ b/frontend/src/app/features/auth/pages/message1/message1.component.html
@@ -1,7 +1,8 @@
-<h1 class="text-2xl font-semibold mb-5">¡Genial!</h1>
-<p class="">Ya tenemos a tus pequeños en Nido.</p>
+<h1 class="text-2xl font-semibold mb-5">Registro completado ⭐️</h1>
+<p class="mb-3">¡Ya casi terminamos!</p>
 <p class="mb-3">
-  Ahora, vamos a crear la primera rutina para empezar a organizar su día.
+  Solo falta añadir a tus pequeños para que puedas empezar a disfrutar de todas
+  las funcionalidades de la aplicación.
 </p>
 <p-button
   styleClass="w-full mt-5"
