--- a/frontend/src/app/features/auth/pages/mensaje2/mensaje2.component.html
+++ b/frontend/src/app/features/auth/pages/mensaje2/mensaje2.component.html
@@ -1,11 +1,12 @@
-<h1 class="text-2xl font-semibold mb-5">¡Genial!</h1>
-<p class="">Ya tenemos a tus pequeños en Nido.</p>
+<h1 class="text-2xl font-semibold mb-5">¡Todo listo!</h1>
+<p class="mb-3">Ya tenemos a tus pequeños en Nido.</p>
 <p class="mb-3">
-  Ahora, vamos a crear la primera rutina para empezar a organizar su día.
+  Empieza a organizar, crear rutinas y disfrutar de una experiencia
+  personalizada para ti y tu familia.
 </p>
 <p-button
   styleClass="w-full mt-5"
   label="Continuar"
   [raised]="true"
-  (onClick)="continueToCreateRoutine()"
+  (onClick)="continueToDashboard()"
 />
