--- a/frontend/src/app/components/family/family-form/family-form.component.html
+++ b/frontend/src/app/components/family/family-form/family-form.component.html
@@ -1,6 +1,14 @@
-<div class="fixed inset-0 backdrop-blur-xs flex items-center justify-center z-50">
-  <div class="bg-white dark:bg-gray-700 rounded-2xl shadow-lg w-[90%] max-w-md max-h-[90vh] flex flex-col p-6 overflow-hidden">
-    <h2 class="text-xl font-semibold text-gray-800 dark:text-white mb-4 shrink-0">Agregar familiar</h2>
+<div
+  class="fixed inset-0 backdrop-blur-xs flex items-center justify-center z-50"
+>
+  <div
+    class="bg-white dark:bg-gray-700 rounded-2xl shadow-lg w-[90%] max-w-md max-h-[90vh] flex flex-col p-6 overflow-hidden"
+  >
+    <h2
+      class="text-xl font-semibold text-gray-800 dark:text-white mb-4 shrink-0"
+    >
+      Agregar familiar
+    </h2>
 
     <form
       [formGroup]="form"
@@ -21,6 +29,7 @@
         placeholder="Seleccionar rol"
         optionLabel="label"
         [optionValue]="'value'"
+        [appendTo]="'body'"
       ></p-select>
 
       <div class="flex justify-end gap-2 mt-4 shrink-0">
@@ -33,8 +42,9 @@
         </button>
         <button
           type="submit"
+          p-button
           [disabled]="form.invalid"
-          class="px-4 py-2 rounded-md text-white bg-purple-500 hover:bg-purple-600 disabled:bg-gray-300 disabled:text-gray-500 disabled:cursor-not-allowed"
+          class="px-4 py-2 rounded-md"
         >
           Enviar invitación
         </button>
